--- a/style.css
+++ b/style.css
@@ -197,6 +197,7 @@ body {
 .main-card:hover {
   border: 2px solid #d3d3d3;
   transition-timing-function: ease-in-out;
+  transform: scale(1.1);
 }
 
 .main-card img {
@@ -251,12 +252,6 @@ h3.whole-program {
   flex-wrap: wrap;
   justify-content: space-between;
 }
-
-/* .speakers-card:hover {
-    border: 2px solid #d3d3d3;
-    transition-timing-function: ease-in-out;
-    transition: width 2s;
-} */
 
 .speakers-image {
   background: url(img/img-b.PNG) left top no-repeat;
@@ -351,18 +346,32 @@ footer {
   justify-content: space-between;
   width: 76%;
   margin: 0 auto 0 auto;
-  padding-top: 50px;
+  padding-top: 5px;
   flex-wrap: wrap;
+}
+
+.logo2 img {
+  display: block;
+  margin: auto 0;
+  padding-top: 24px;
 }
 
 .copyright-details {
   width: 70%;
   color: #272a31;
+  margin: auto 0;
 }
 
 .copyright-details h4 {
   width: 100%;
   padding-bottom: 12px;
+  text-align: left;
+  padding-top: 0;
+  margin-top: 0;
+}
+
+.copyright-details p {
+  text-align: left;
 }
 
 /* About Html Page */
@@ -926,7 +935,6 @@ footer.about {
     width: 100%;
     text-align: left;
     font-size: 12px;
-    padding-top: 24px;
   }
 
   footer.about {
