--- a/style.css
+++ b/style.css
@@ -112,8 +112,8 @@ body {
 }
 
 .introduction h1 {
-  font-size: 80px;
-  line-height: 70px;
+  font-size: 65px;
+  line-height: 64px;
   font-weight: 900;
   padding-right: 48px;
   background:
@@ -130,7 +130,7 @@ body {
     );
   -webkit-background-clip: text;
   color: transparent;
-  width: 85%;
+  width: 70%;
 }
 
 .short-intro {
@@ -180,11 +180,11 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 5fr));
-  width: 76%;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 5fr));
+  width: 80%;
   justify-content: start;
   align-content: center;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
   position: relative;
   gap: 4px;
 }
@@ -672,7 +672,10 @@ footer.about {
   }
 
   .grid-container {
-    width: 80%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
   }
 
   .main-card {
@@ -706,7 +709,7 @@ footer.about {
     color: #d3d3d3;
     width: 60%;
     font-size: 11px;
-    padding-top: 12px;
+    margin: auto;
   }
 
   .forum .join-summit {
